--- a/style.css
+++ b/style.css
@@ -23,4 +23,9 @@ button:hover {
         font-size: 16px;
     }
 }
+.dark-mode {
+    background-color: #2e4d20; /* Verde escuro */
+    color: #f4ece3; /* Bege quente */
+}
+
 
