--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Estilos gerais */
+/* Corrigir fundo branco */
 body {
     font-family: "Poppins", sans-serif;
     background-color: #f4ece3; /* Bege quente */
@@ -12,6 +12,12 @@ body {
 .dark-mode {
     background-color: #2e4d20;
     color: #f4ece3;
+}
+
+/* Carrossel funcionando */
+.carousel-container {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
 }
 
 /* Galeria */
